# stocks-api-docker-compose

./: .env  .gitmodules  README.md  build-and-push-images.sh  docker-compose-scraping-server.yml  docker-compose.yml  encrypt_env.sh  my_password.txt  package-lock.json  run-master-services.sh  run-scrape-services.sh
alpaca-trading-bot/: AlpacaAPI.py  Dockerfile  TradingAlgorithm.py  decrypt_secrets.sh  main.py  pyproject.toml  rsi-moving-average.py
alpaca-trading-bot/todo/: main.py
aws-cdk-python/: docker-compose.yml
aws-cdk-python/scripts/: create_ec2_instances.py
prometheus/: prometheus.yml
python-docker-compose/: create_ec2_instances.py  generate_prometheus_file.py  load_stock_symbols.py  prometheus.yml
python3-boto-env/: .env  2bb7e834-4067-4920-9152-f849328c6674.json  Dockerfile  Dockerfile.boto3  decrypt.sh  docker-compose.yml  encrypt.sh  pyproject.toml  requirements.txt  ticker_body.json
python3-boto-env/app/: Logger.py  app.py  database.py  db_config.json  service.py
python3-boto-env/app/factory/: database.py
python3-boto-env/app/models/: todo.py
python3-boto-env/app/views/: todos.py
python3-boto-env/scripts/: create_ec2_instances.py  encrypt_access_keys.py  load_stock_symbols.py  prometheus_template.j2  refresh_ec2_instances.py  run_scrape.py  start_ec2_instances.py  stop_ec2_instances.py  store_secrets.py  swap_ip_addresses.py  terminate_ec2_instances.py
rotating-proxy/: Dockerfile  app.py  aws_secrets.json.cpt  decrypt_secrets.sh  pyproject.toml
rotating-proxy/requests_ip_rotator/: ip_rotator.py
stock-api/: Dockerfile  README.md  algorithms-server.js  constants.js  package-lock.json  package.json  scraping-server.js
stock-api/config/: db.config.js
stock-api/controller/: scrape.controller.js
stock-api/frontend/: .eslintcache  Dockerfile  docker-compose.yml  package-lock.json  package.json
stock-api/http-client-with-prom-metrics-tracking/: .eslintrc.json  .gitignore  README.md  constants.js  index.js  package-lock.json  package.json
stock-api/model/: request.model.js  scrape.model.js
(+41 files in other folders)
