[tool.poetry]
name = "python3-boto-env"
version = "0.1.0"
description = ""
authors = ["Joe Jackson <joseph.jackson@inturn.co>"]
readme = "README.md"
packages = [{include = "python3_boto_env"}]

[tool.poetry.dependencies]
python = "^3.11"
aniso8601 = "9.0.1"
asyncio = "3.4.3"
boto3 = "1.26.20"
botocore = "1.29.20"
certifi = "2022.9.24"
charset-normalizer = "2.1.1"
click = "8.1.3"
dnspython = "2.2.1"
flask = "2.2.2"
flask-restful = "0.3.9"
idna = "3.4"
importlib-metadata = "5.2.0"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
jmespath = "1.0.1"
markupsafe = "2.1.1"
pymongo = "4.3.3"
python-dateutil = "2.8.2"
pytz = "2022.7"
requests = "2.28.1"
ruamel-yaml = "0.17.21"
ruamel-yaml-clib = "0.2.7"
ruamel-yaml-string = "0.1.0"
s3transfer = "0.6.0"
six = "1.16.0"
urllib3 = "1.26.13"
werkzeug = "2.2.2"
zipp = "3.11.0"
flask-cors = "^3.0.10"
cryptography = "^39.0.2"
awscliv2 = "^2.2.0"
gitpython = "^3.1.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
