[tool.poetry]
name = "rotating-proxy"
version = "0.1.0"
description = ""
authors = ["Joe Jackson <joseph.jackson@inturn.co>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
flask = "^2.2.3"
requests-ip-rotator = "^1.0.14"
boto3 = "^1.26.89"
botocore = "^1.29.89"
requests-random-user-agent = "^2023.2.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
